Correcting issue - pulled wrong census columns
Columns for census data changed labels and names over the years, so my data was pulled incorrectly, Update R script to fix this and re-ran all processes to disaggregate

--- a/DATA/Census/schema.ini
+++ b/DATA/Census/schema.ini
@@ -522,3 +522,370 @@ Col97=Shape_Length Double
 Col98=Shape_Area Double
 Col99=Area_Intsct_SqMiles Double
 Col100=Area_Weight Double
+[Census Data - Selected Joins (2020+ Only).csv]
+Col6=P_NOTHSPNC_White_alone_2020 Text
+Col7=E_Under35_SX_AGE_2020 Text
+Col11=P_NOTHSPNC_White_alone_2021 Text
+Col12=E_Under35_SX_AGE_2021 Text
+Col17=E_Under35_SX_AGE_2022 Text
+[Census Data - Selected Joins Intersected with DMAs (2020-2022).csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=FID_Tracts_CensusDataJoined_2020Onward Long
+Col2=GEOID Text Width 11
+Col3=GEOID_Dub Double
+Col4=OBJECTID_1 Long
+Col5=Field1 Long
+Col6=GEO_ID Text Width 8000
+Col7=E_Total_population_SX_AGE_2020 Long
+Col8=E_HSPNC_Total_population_2020 Long
+Col9=E_NOTHSPNC_White_alone_2020 Long
+Col10=P_NOTHSPNC_White_alone_2020 Double
+Col11=E_Under35_SX_AGE_2020 Double
+Col12=E_Total_population_SX_AGE_2021 Long
+Col13=E_HSPNC_Total_population_2021 Long
+Col14=E_NOTHSPNC_White_alone_2021 Long
+Col15=P_NOTHSPNC_White_alone_2021 Double
+Col16=E_Under35_SX_AGE_2021 Double
+Col17=E_Total_population_SX_AGE_2022 Long
+Col18=E_HSPNC_Total_population_2022 Long
+Col19=E_NOTHSPNC_White_alone_2022 Long
+Col20=P_NOTHSPNC_White_alone_2022 Long
+Col21=E_Under35_SX_AGE_2022 Double
+Col22=GEO_ID_Dub Double
+Col23=Area_Tract_SqMiles Double
+Col24=FID_DMAs_CirculatoryER_CensusData_GTrends_CleanedFieldsV4 Long
+Col25=ID Text Width 50
+Col26=NAME Text Width 254
+Col27=STATE_NAME Text Width 20
+Col28=ST_ABBREV Text Width 2
+Col29=esri_dma_P Double
+Col30=TOTPOP_CY Long
+Col31=TtlHsptls Long
+Col32=Circ10 Long
+Col33=Circ11 Long
+Col34=Circ12 Long
+Col35=Circ13 Long
+Col36=Circ14 Long
+Col37=Circ15 Long
+Col38=Circ16 Long
+Col39=Circ17 Long
+Col40=Circ18 Long
+Col41=Circ19 Long
+Col42=Circ20 Long
+Col43=Circ21 Long
+Col44=Circ22 Long
+Col45=CircWtd19 Double
+Col46=CircWtd10 Double
+Col47=CircWtd11 Double
+Col48=CircWtd12 Double
+Col49=CircWtd13 Double
+Col50=CircWtd14 Double
+Col51=CircWtd15 Double
+Col52=CircWtd16 Double
+Col53=CircWtd17 Double
+Col54=CircWtd18 Double
+Col55=Area_DMA_S Double
+Col56=ID_Long Long
+Col57=OBJECTID_12 Long
+Col58=ID_1 Long
+Col59=TTL10 Double
+Col60=TTL11 Double
+Col61=TTL12 Double
+Col62=TTL13 Double
+Col63=TTL14 Double
+Col64=TTL15 Double
+Col65=TTL16 Double
+Col66=TTL17 Double
+Col67=TTL18 Double
+Col68=TTL19 Double
+Col69=P_WHTE10 Double
+Col70=P_WHTE11 Double
+Col71=P_WHTE12 Double
+Col72=P_WHTE13 Double
+Col73=P_WHTE14 Double
+Col74=P_WHTE15 Double
+Col75=P_WHTE16 Double
+Col76=P_WHTE17 Double
+Col77=P_WHTE18 Double
+Col78=P_WHTE19 Double
+Col79=P_BIPOC19 Double
+Col80=P_BIPOC10 Double
+Col81=P_BIPOC11 Double
+Col82=P_BIPOC12 Double
+Col83=P_BIPOC13 Double
+Col84=P_BIPOC14 Double
+Col85=P_BIPOC15 Double
+Col86=P_BIPOC16 Double
+Col87=P_BIPOC17 Double
+Col88=P_BIPOC18 Text Width 512
+Col89=AGE10 Double
+Col90=AGE11 Double
+Col91=AGE12 Double
+Col92=AGE13 Double
+Col93=AGE14 Double
+Col94=AGE15 Double
+Col95=AGE16 Double
+Col96=AGE17 Double
+Col97=AGE18 Double
+Col98=AGE19 Double
+Col99=P_AGE19 Double
+Col100=P_AGE10 Double
+Col101=P_AGE11 Double
+Col102=P_AGE12 Double
+Col103=P_AGE13 Double
+Col104=P_AGE14 Double
+Col105=P_AGE15 Double
+Col106=P_AGE16 Double
+Col107=P_AGE17 Double
+Col108=P_AGE18 Double
+Col109=OBJECTID_2 Long
+Col110=FastFood Text Width 254
+Col111=ID_12 Long
+Col112=McD10 Double
+Col113=McD11 Double
+Col114=McD12 Double
+Col115=McD13 Double
+Col116=McD14 Double
+Col117=McD15 Double
+Col118=McD16 Double
+Col119=McD17 Double
+Col120=McD18 Double
+Col121=McD19 Double
+Col122=McD20 Double
+Col123=McD21 Double
+Col124=McD22 Double
+Col125=TB10 Double
+Col126=TB11 Double
+Col127=TB12 Double
+Col128=TB13 Double
+Col129=TB14 Double
+Col130=TB15 Double
+Col131=TB16 Double
+Col132=TB17 Double
+Col133=TB18 Double
+Col134=TB19 Double
+Col135=TB20 Double
+Col136=TB21 Double
+Col137=TB22 Double
+Col138=BK10 Double
+Col139=BK11 Long
+Col140=BK12 Long
+Col141=BK13 Long
+Col142=BK14 Long
+Col143=BK15 Double
+Col144=BK16 Double
+Col145=BK17 Double
+Col146=BK18 Double
+Col147=BK19 Double
+Col148=BK20 Double
+Col149=BK21 Double
+Col150=BK22 Double
+Col151=CJ10 Text Width 254
+Col152=CJ11 Text Width 254
+Col153=CJ12 Text Width 254
+Col154=CJ13 Long
+Col155=CJ14 Text Width 254
+Col156=CJ15 Text Width 254
+Col157=CJ16 Text Width 254
+Col158=CJ17 Text Width 254
+Col159=CJ18 Double
+Col160=CJ19 Long
+Col161=CJ20 Text Width 254
+Col162=CJ21 Text Width 254
+Col163=CJ22 Text Width 254
+Col164=JITB10 Text Width 254
+Col165=JITB11 Text Width 254
+Col166=JITB12 Long
+Col167=JITB13 Double
+Col168=JITB14 Long
+Col169=JITB15 Long
+Col170=JITB16 Double
+Col171=JITB17 Double
+Col172=JITB18 Double
+Col173=JITB19 Double
+Col174=JITB20 Double
+Col175=JITB21 Double
+Col176=JITB22 Double
+Col177=KFC10 Text Width 254
+Col178=KFC11 Text Width 254
+Col179=KFC12 Long
+Col180=KFC13 Long
+Col181=KFC14 Text Width 254
+Col182=KFC15 Double
+Col183=KFC16 Long
+Col184=KFC17 Long
+Col185=KFC18 Double
+Col186=KFC19 Double
+Col187=KFC20 Double
+Col188=KFC21 Double
+Col189=KFC22 Double
+Col190=Shape_Leng Double
+Col191=COUNT_Intscts Long
+Col192=OBJECTID_12_13 Long
+Col193=Join_Count Long
+Col194=TARGET_FID Long
+Col195=Hsptls10 Short
+Col196=Hsptls11 Short
+Col197=Hsptls12 Short
+Col198=Hsptls13 Short
+Col199=Hsptls14 Short
+Col200=Hsptls16 Short
+Col201=Hsptls17 Short
+Col202=Hsptls18 Short
+Col203=Hsptls19 Short
+Col204=Hsptls20 Short
+Col205=Hsptls21 Short
+Col206=Hsptls22 Short
+Col207=Shape_Length_1 Double
+Col208=Shape_Area_1 Double
+Col209=Shape_Length Double
+Col210=Shape_Area Double
+Col211=Area_Intsct_SqMiles Double
+Col212=Area_Wghts Double
+[Census Data - Selected Joins (2010-2019) V2.csv]
+Col2=TtlPop_Hsp_2010 Text
+Col3=TtlPop_Hsp_2011 Text
+Col4=TtlPop_Hsp_2012 Text
+Col5=TtlPop_Hsp_2013 Text
+Col6=TtlPop_Hsp_2014 Text
+Col7=TtlPop_Hsp_2015 Text
+Col8=TtlPop_Hsp_2016 Text
+Col9=TtlPop_Hsp_2017 Text
+Col10=TtlPop_Hsp_2018 Text
+Col11=TtlPop_Hsp_2019 Text
+Col12=WHTE_2010 Text
+Col13=WHTE_2011 Text
+Col14=WHTE_2012 Text
+Col15=WHTE_2013 Text
+Col16=WHTE_2014 Text
+Col17=WHTE_2015 Text
+Col18=WHTE_2016 Text
+Col19=WHTE_2017 Text
+Col20=WHTE_2018 Text
+Col21=WHTE_2019 Text
+Col22=TtlPop_SxAge_2010 Text
+Col23=TtlPop_SxAge_2011 Text
+Col24=TtlPop_SxAge_2012 Text
+Col25=TtlPop_SxAge_2013 Text
+Col26=TtlPop_SxAge_2014 Text
+Col27=TtlPop_SxAge_2015 Text
+Col28=TtlPop_SxAge_2016 Text
+Col29=TtlPop_SxAge_2017 Text
+Col30=TtlPop_SxAge_2018 Text
+Col31=TtlPop_SxAge_2019 Text
+Col32=AGE_2010 Text
+Col33=AGE_2011 Text
+Col34=AGE_2012 Text
+Col35=AGE_2013 Text
+Col36=AGE_2014 Text
+Col37=AGE_2015 Text
+Col38=AGE_2016 Text
+Col39=AGE_2017 Text
+Col40=AGE_2018 Text
+Col41=AGE_2019 Text
+[Census Data - Selected Joins - Intersected (2010-2019) V2.csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=FID_Tracts_CensusDataJoined_2010to2019_V2_Projected Long
+Col2=STATEFP Text Width 2
+Col3=COUNTYFP Text Width 3
+Col4=TRACTCE Text Width 6
+Col5=GEOID Text Width 11
+Col6=NAME Text Width 7
+Col7=NAMELSAD Text Width 20
+Col8=MTFCC Text Width 5
+Col9=FUNCSTAT Text Width 1
+Col10=ALAND Double
+Col11=AWATER Double
+Col12=INTPTLAT Text Width 11
+Col13=INTPTLON Text Width 12
+Col14=GEOID_Dub Double
+Col15=OBJECTID_1 Long
+Col16=GEO_ID LongLong
+Col17=TtlPop_Hsp_2010 Long
+Col18=TtlPop_Hsp_2011 Long
+Col19=TtlPop_Hsp_2012 Long
+Col20=TtlPop_Hsp_2013 Long
+Col21=TtlPop_Hsp_2014 Long
+Col22=TtlPop_Hsp_2015 Long
+Col23=TtlPop_Hsp_2016 Long
+Col24=TtlPop_Hsp_2017 Long
+Col25=TtlPop_Hsp_2018 Long
+Col26=TtlPop_Hsp_2019 Long
+Col27=WHTE_2010 Long
+Col28=WHTE_2011 Long
+Col29=WHTE_2012 Long
+Col30=WHTE_2013 Long
+Col31=WHTE_2014 Long
+Col32=WHTE_2015 Long
+Col33=WHTE_2016 Long
+Col34=WHTE_2017 Long
+Col35=WHTE_2018 Long
+Col36=WHTE_2019 Long
+Col37=TtlPop_SxAge_2010 Long
+Col38=TtlPop_SxAge_2011 Long
+Col39=TtlPop_SxAge_2012 Long
+Col40=TtlPop_SxAge_2013 Long
+Col41=TtlPop_SxAge_2014 Long
+Col42=TtlPop_SxAge_2015 Long
+Col43=TtlPop_SxAge_2016 Long
+Col44=TtlPop_SxAge_2017 Long
+Col45=TtlPop_SxAge_2018 Long
+Col46=TtlPop_SxAge_2019 Long
+Col47=AGE_2010 Long
+Col48=AGE_2011 Long
+Col49=AGE_2012 Long
+Col50=AGE_2013 Long
+Col51=AGE_2014 Long
+Col52=AGE_2015 Long
+Col53=AGE_2016 Long
+Col54=AGE_2017 Long
+Col55=AGE_2018 Long
+Col56=AGE_2019 Long
+Col57=Area_Tract_SqMiles Double
+Col58=FID_DMABoundaries_CA Long
+Col59=OBJECTID_12 Long
+Col60=ID Text Width 50
+Col61=NAME_1 Text Width 254
+Col62=STATE_NAME Text Width 20
+Col63=ST_ABBREV Text Width 2
+Col64=esri_dma_P Double
+Col65=TOTPOP_CY Long
+Col66=Shape_Length Double
+Col67=Shape_Area Double
+Col68=Area_Intscs_SqMiles Double
+Col69=Area_Wght Double
+[Census Data - Selected Joins - Intersected (2020-2022) V2.csv]
+Format=CSVDelimited
+ColNameHeader=True
+Col1=FID_TractsCensusDataJoined_2020to2022_V2_Projected Long
+Col2=GEOID Text Width 11
+Col3=GEOID_Dub Double
+Col4=OBJECTID_1 Long
+Col5=GEO_ID LongLong
+Col6=TtlPop_Hsp_2020 Long
+Col7=TtlPop_Hsp_2021 Long
+Col8=TtlPop_Hsp_2022 Long
+Col9=WHTE_2020 Long
+Col10=WHTE_2021 Long
+Col11=WHTE_2022 Long
+Col12=TtlPop_SxAge_2020 Long
+Col13=TtlPop_SxAge_2021 Long
+Col14=TtlPop_SxAge_2022 Long
+Col15=AGE_2020 Long
+Col16=AGE_2021 Long
+Col17=AGE_2022 Long
+Col18=Area_Tract_SqMiles Double
+Col19=FID_DMABoundaries_CA Long
+Col20=OBJECTID_12 Long
+Col21=ID Text Width 50
+Col22=NAME Text Width 254
+Col23=STATE_NAME Text Width 20
+Col24=ST_ABBREV Text Width 2
+Col25=esri_dma_P Double
+Col26=TOTPOP_CY Long
+Col27=Shape_Length Double
+Col28=Shape_Area Double
+Col29=Area_Intscs_SqMiles Double
+Col30=Area_Wght Double
